이메일 인증, 로그아웃 구현, signToken update, redis 연결
