# middlewares/authJWT.js
@@ -2,10 +2,10 @@ const { verify } = require('../utils/jwt-util');
 
 const authJWT = (req, res, next) => {
     if (req.headers.authorization) {
-      const token = req.headers.authorization.split('Bearer ') [1]; // header에서 access token을 가져옵니다.
+      const token = req.headers.authorization.split('Bearer ')[1]; // header에서 access token을 가져옵니다.
       const result = verify(token); // token을 검증합니다.
       if (result.ok) { // token이 검증되었으면 req에 값을 세팅하고, 다음 콜백함수로 갑니다.
-        req.email = result.email;
+        req.email = result.email.email.member_email;
         next();
       } else { // 검증에 실패하거나 토큰이 만료되었다면 클라이언트에게 메세지를 담아서 응답합니다.
         res.status(401).send({
